--- a/video-js/themes/fantasy/index.css
+++ b/video-js/themes/fantasy/index.css
@@ -1,6 +1,6 @@
 .vjs-theme-fantasy {
-  --vjs-theme-fantasy--primary: #9f44b4;
-  --vjs-theme-fantasy--secondary: #fff;
+  --vjs-theme-fantasy--primary: #fff;
+  --vjs-theme-fantasy--secondary: #36BADF;
 }
 
 .vjs-theme-fantasy .vjs-big-play-button {
