--- a/css/rand.bg.css
+++ b/css/rand.bg.css
@@ -24,16 +24,16 @@ background-image: url('../images/1.jpg');
 background-image: url('../images/2.jpg');
 }
 .randbg.bg3 {
-background-image: url('../images/3.gif');
+background-image: url('../images/3.jpg');
 }
 .randbg.bg4 {
 background-image: url('../images/4.jpg');
 }
 .randbg.bg5 {
-background-image: url('../images/5.png');
+background-image: url('../images/5.jpg');
 }
 .randbg.bg6 {
-background-image: url('../images/6.png');
+background-image: url('../images/6.jpg');
 }
 .randbg.bg7 {
 background-image: url('../images/7.jpg');
